@@ -733,5 +733,6 @@ AC_OUTPUT( Makefile \
 	   packages/Linux/Makefile \
 	   packages/Linux/RPM/Makefile \
 	   packages/Linux/RPM/curl.spec \
-	   packages/Linux/RPM/curl-ssl.spec )
+	   packages/Linux/RPM/curl-ssl.spec \
+           tiny/Makefile )
 
