@@ -2,7 +2,7 @@
 .\" nroff -man [file]
 .\" Written by daniel@haxx.se
 .\"
-.TH curl_easy_perform 3 "25 Jan 2001" "Curl 7.0" "libcurl Manual"
+.TH curl_easy_perform 3 "1 Mar 2001" "Curl 7.0" "libcurl Manual"
 .SH NAME
 curl_easy_perform - Do the actual transfer in a "easy" session
 .SH SYNOPSIS
@@ -25,7 +25,7 @@ again first.
 .I <curl/curl.h>
 defines. If the CURLOPT_ERRORBUFFER was set with
 .I curl_easy_setopt
-there willo be a readable error message in the error buffer when non-zero is
+there will be a readable error message in the error buffer when non-zero is
 returned.
 .SH "SEE ALSO"
 .BR curl_easy_init "(3), " curl_easy_setopt "(3), "
