@@ -458,7 +458,7 @@ char *curl_getenv(char *variable);
 char *curl_version(void);
 
 /* This is the version number */
-#define LIBCURL_VERSION "7.7-alpha1"
+#define LIBCURL_VERSION "7.7-alpha2"
 #define LIBCURL_VERSION_NUM 0x070000
 
 /* linked-list structure for the CURLOPT_QUOTE option (and other) */
