@@ -1,3 +1,3 @@
 #define CURL_NAME "curl"
-#define CURL_VERSION "7.7-alpha1"
+#define CURL_VERSION "7.7-alpha2"
 #define CURL_ID CURL_NAME " " CURL_VERSION " (" OS ") "
